rustdocs/errors/rust-bitcoin-units-src-locktime-relative-mod.rs.txt
error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/units/src/locktime/relative/error.rs:5:5
  |
5 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
 --> ../rust-bitcoin/units/src/locktime/relative/error.rs:7:5
  |
7 | use internals::write_err;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
 --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:9:1
  |
9 + extern crate internals;
  |

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:11:5
   |
11 | use core::{convert, fmt};
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:15:5
   |
15 | use internals::const_casts;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 9 + extern crate internals;
   |

error[E0432]: unresolved import `crate::relative`
  --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:18:5
   |
18 | use crate::relative;
   |     ^^^^^^^^^^^^^^^ no `relative` in the root

error[E0432]: unresolved imports `crate::parse_int`, `crate::BlockHeight`, `crate::BlockMtp`, `crate::Sequence`
  --> ../rust-bitcoin/units/src/locktime/relative/mod.rs:19:13
   |
19 | use crate::{parse_int, BlockHeight, BlockMtp, Sequence};
   |             ^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^  ^^^^^^^^ no `Sequence` in the root
   |             |          |            |
   |             |          |            no `BlockMtp` in the root
   |             |          no `BlockHeight` in the root
   |             no `parse_int` in the root

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0432`.
